Bug Fix: Logitech C930 On Linux Results In Freezing Video

We implemented using camera timestamp in https://codereview.chromium.org/1983193002

But in testing, we found a problem on Logitech C930, which
gives us non-monotonic timestamps, which will result in
vido freezing.

BUG=660883

Review-Url: https://codereview.chromium.org/2463853002
Cr-Commit-Position: refs/heads/master@{#429620}

Former-commit-id: 6b8877a5ac02394679fdf37944af414d7534edba